--- a/components/ai_chat_ui/BUILD.gn
+++ b/components/ai_chat_ui/BUILD.gn
@@ -3,7 +3,10 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
+import("//brave/components/ai_chat/common/buildflags/buildflags.gni")
 import("//brave/components/common/typescript.gni")
+
+assert(enable_ai_chat)
 
 transpile_web_ui("ai_chat_ui") {
   resource_name = "ai_chat_ui"
@@ -11,7 +14,7 @@ transpile_web_ui("ai_chat_ui") {
         "chat_ui",
         rebase_path("chat_ui.tsx"),
       ] ]
-  deps = [ "//brave/components/ai_chat:mojom_js" ]
+  deps = [ "//brave/components/ai_chat/common/mojom:mojom_js" ]
 }
 
 pack_web_resources("generated_resources") {
