--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -232,6 +232,7 @@ leo_icons = [
   "settings.svg",
   "shield-done.svg",
   "sort-desc.svg",
+  "stack.svg",
   "swap-horizontal.svg",
   "thumb-down.svg",
   "trash.svg",
