--- a/components/brave_vpn/browser/connection/ikev2/BUILD.gn
+++ b/components/brave_vpn/browser/connection/ikev2/BUILD.gn
@@ -21,8 +21,9 @@ source_set("ikev2") {
     "//brave/components/brave_vpn/common",
     "//brave/components/brave_vpn/common/mojom",
     "//components/prefs",
-    "//services/network/public/cpp",
   ]
+
+  public_deps = [ "//services/network/public/cpp" ]
 }
 
 source_set("sim") {
@@ -57,6 +58,7 @@ source_set("unit_tests") {
     "//brave/components/brave_vpn/common/mojom",
     "//components/sync_preferences:test_support",
     "//content/test:test_support",
+    "//services/data_decoder/public/cpp:test_support",
     "//services/network:test_support",
     "//testing/gtest",
     "//third_party/abseil-cpp:absl",
