--- a/components/brave_ads/core/internal/BUILD.gn
+++ b/components/brave_ads/core/internal/BUILD.gn
@@ -107,6 +107,7 @@ source_set("internal") {
     "account/transactions/transactions_util.h",
     "account/user_data/build_channel_user_data.cc",
     "account/user_data/build_channel_user_data.h",
+    "account/user_data/build_user_data_callback.h",
     "account/user_data/catalog_user_data.cc",
     "account/user_data/catalog_user_data.h",
     "account/user_data/conversion_user_data.cc",
