chore(wallet): Built out reusable Create Account Icon

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -175,6 +175,7 @@ leo_icons = [
   "eye-on.svg",
   "filter-settings.svg",
   "flash.svg",
+  "flashdrive.svg",
   "graph.svg",
   "grid04.svg",
   "help-outline.svg",
