Add vertical tab P3A metrics

--- a/browser/misc_metrics/sources.gni
+++ b/browser/misc_metrics/sources.gni
@@ -10,6 +10,13 @@ brave_browser_misc_metrics_sources = [
   "//brave/browser/misc_metrics/page_metrics_tab_helper.h",
 ]
 
+if (!is_android) {
+  brave_browser_misc_metrics_sources += [
+    "//brave/browser/misc_metrics/vertical_tab_metrics.cc",
+    "//brave/browser/misc_metrics/vertical_tab_metrics.h",
+  ]
+}
+
 brave_browser_misc_metrics_deps = [
   "//brave/browser:browser_process",
   "//brave/browser/profiles:util",
