Show full network name in the status bar

--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -937,6 +937,7 @@ brave_java_resources = [
   "java/res/layout/rewards_tipping_success_contribution_fragment.xml",
   "java/res/layout/rewards_you_are_not_earning_dialog.xml",
   "java/res/layout/search_preference.xml",
+  "java/res/layout/selected_network_item.xml",
   "java/res/layout/shimmer_skeleton_item.xml",
   "java/res/layout/swap_bottom_sheet.xml",
   "java/res/layout/tipping_banner_tipping_panel_inside_layout.xml",
