--- a/components/brave_ads/core/test/BUILD.gn
+++ b/components/brave_ads/core/test/BUILD.gn
@@ -90,6 +90,7 @@ source_set("brave_ads_unit_tests") {
     "//brave/components/brave_ads/core/internal/account/user_data/locale_user_data_unittest.cc",
     "//brave/components/brave_ads/core/internal/account/user_data/platform_user_data_unittest.cc",
     "//brave/components/brave_ads/core/internal/account/user_data/rotating_hash_user_data_unittest.cc",
+    "//brave/components/brave_ads/core/internal/account/user_data/rotating_hash_user_data_util_unittest.cc",
     "//brave/components/brave_ads/core/internal/account/user_data/segment_user_data_unittest.cc",
     "//brave/components/brave_ads/core/internal/account/user_data/studies_user_data_unittest.cc",
     "//brave/components/brave_ads/core/internal/account/user_data/summary_user_data_unittest.cc",
