--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -264,6 +264,9 @@ leo_icons = [
   "warning-triangle-outline.svg",
   "window-tab-new.svg",
   "windows-open.svg",
+  "product-ipfs-outline.svg",
+  "web3.svg",
+  "shield-star.svg",
 ]
 
 if (enable_brave_vpn_panel) {
