--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -968,6 +968,10 @@ test("brave_browser_tests") {
     ]
   }
 
+  if (is_apple) {
+    configs += [ "//build/config/compiler:enable_arc" ]
+  }
+
   if (use_aura) {
     deps += [ "//ui/aura:test_support" ]
   }
