[Android] Fixes for unit tests
Chromium change:
https://github.com/chromium/chromium/commit/7acb8d6bc8401edde79c01e49f6764f821aded8f

Reland "JNI: Only using 1 registration per apk"
This reverts commit 6f773ca.

Reason for revert: Now I'm keeping around the extra jni_registration
until I can migrate all uses off of it.

Original change's description:
> Revert "JNI: Only using 1 registration per apk"
>
> This reverts commit a74d255.
>
> Reason for revert: broke internal bots
>
> Original change's description:
> > JNI: Only using 1 registration per apk
> >
> > We now associate a JNI registration with a native library, via our new
> > native_with_jni template. We no longer have a generate_jni_registration
> > happening with pure Java in the apk template.
> >
> > We now only output 1 GEN_JNI per srcjar, and instead of collecting all
> > JNI from modules and outputting many GEN_JNIs in one srcjar.
> >
> > Bug: 1406611
> > Change-Id: Iec40dc7c443e206f177fa8a7d5f9635cefa4c747
> > Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4219332
> > Commit-Queue: Sam Maier <smaier@chromium.org>
> > Owners-Override: Sam Maier <smaier@chromium.org>
> > Reviewed-by: Andrew Grieve <agrieve@chromium.org>
> > Cr-Commit-Position: refs/heads/main@{#1142236}
>
> Bug: 1406611
> Change-Id: Ifedf95de229bd16039ae026dfe3ccc90b66f154c
> No-Presubmit: true
> No-Tree-Checks: true
> No-Try: true
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4518235
> Commit-Queue: Lijin Shen <lazzzis@google.com>
> Auto-Submit: Sam Maier <smaier@chromium.org>
> Reviewed-by: Lijin Shen <lazzzis@google.com>
> Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
> Owners-Override: Lijin Shen <lazzzis@google.com>
> Cr-Commit-Position: refs/heads/main@{#1142294}

Bug: 1406611

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -1184,14 +1184,11 @@ if (is_android) {
     ]
   }
 
-  chrome_public_common_apk_or_module_tmpl("brave_public_test_apk") {
-    testonly = true
-    target_type = "instrumentation_test_apk"
+  chrome_public_test_apk_tmpl("brave_public_test_apk") {
     apk_name = "BravePublicTest"
     android_manifest = brave_public_test_apk_manifest
     android_manifest_dep = ":brave_public_test_apk_manifest"
     manifest_package = brave_public_test_manifest_package
-    shared_libraries = [ "//chrome/android:libchromefortest" ]
     if (!is_java_debug) {
       proguard_enabled = true
       proguard_configs = [
@@ -1249,6 +1246,7 @@ if (is_android) {
       "//components/browser_ui/settings/android:java",
       "//components/browser_ui/site_settings/android:java",
       "//components/browser_ui/widget/android:java",
+      "//components/commerce/core/android:core_java",
       "//components/embedder_support/android:browser_context_java",
       "//components/external_intents/android:java",
       "//components/favicon/android:java",
