[Uplift Shortcuts]: Assorted fixes for shortcuts in 1.53 (#18780)
* [Shortcuts]: Improve dark theme (#18725)

* [Shortcuts]: Fix shortcuts page url (#18785)

* Use Leo Dialog on Configure Shortcuts page (#18804)

* [Shortcuts]: Add translations (#18765)

* [Shortcuts]: Translate UI Strings (#18837)

* Hardcode supported Chromium commands (#18894)

Hardcode supported Chrome commands

* [Shortcuts] Display NumPad keys differently (#18896)

--- a/app/BUILD.gn
+++ b/app/BUILD.gn
@@ -13,10 +13,7 @@ import("//build/config/features.gni")
 import("//build/config/locales.gni")
 
 action("generate_command_metadata") {
-  command_files = [
-    "//chrome/app/chrome_command_ids.h",
-    "//brave/app/brave_command_ids.h",
-  ]
+  command_files = [ "//brave/app/brave_command_ids.h" ]
   cc_template = "command_utils.cc.template"
 
   sources = command_files + [ cc_template ]
@@ -39,8 +36,12 @@ source_set("command_ids") {
 
   deps = [
     "//base",
+    "//brave/components/resources:strings",
     "//chrome/app:command_ids",
+    "//chrome/app:generated_resources",
     "//components/services/screen_ai/buildflags",
+    "//components/strings:components_strings",
+    "//ui/strings:ui_strings",
   ]
 
   if (!is_android) {
