--- a/components/brave_news/browser/resources/BUILD.gn
+++ b/components/brave_news/browser/resources/BUILD.gn
@@ -5,10 +5,10 @@
 
 import("//brave/components/common/typescript.gni")
 
-transpile_web_ui("brave_news_inspect") {
+transpile_web_ui("brave_news_internals") {
   entry_points = [ [
-    "brave_news_inspect",
-    rebase_path("inspect.tsx")
+    "brave_news_internals",
+    rebase_path("internals.tsx")
   ] ]
 
   deps = [
@@ -17,12 +17,12 @@ transpile_web_ui("brave_news_inspect") {
     "//brave/components/brave_news/common:mojom_js"
   ]
 
-  resource_name = "brave_news_inspect"
+  resource_name = "brave_news_internals"
 }
 
 pack_web_resources("generated_resources") {
-  resource_name = "brave_news_inspect"
+  resource_name = "brave_news_internals"
 
   output_dir = "$root_gen_dir/brave/components/brave_news/browser/resources"
-  deps = [ ":brave_news_inspect" ]
+  deps = [ ":brave_news_internals" ]
 }
