--- a/components/brave_news/browser/resources/BUILD.gn
+++ b/components/brave_news/browser/resources/BUILD.gn
@@ -7,14 +7,14 @@ import("//brave/components/common/typescript.gni")
 
 transpile_web_ui("brave_news_internals") {
   entry_points = [ [
-    "brave_news_internals",
-    rebase_path("internals.tsx")
-  ] ]
+        "brave_news_internals",
+        rebase_path("internals.tsx"),
+      ] ]
 
   deps = [
     "//brave/components/brave_news/common",
     "//brave/components/brave_news/common:mojom",
-    "//brave/components/brave_news/common:mojom_js"
+    "//brave/components/brave_news/common:mojom_js",
   ]
 
   resource_name = "brave_news_internals"
