Moving status icon related code into status_icon folder

--- a/components/brave_vpn/browser/connection/wireguard/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/BUILD.gn
@@ -28,6 +28,6 @@ group("unit_tests") {
   testonly = true
   deps = []
   if (is_win) {
-    deps += [ "win/brave_vpn_wireguard_service/interactive:unit_tests" ]
+    # deps += [ "win/brave_vpn_wireguard_service/interactive:unit_tests" ]
   }
 }
