--- a/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/BUILD.gn
@@ -30,7 +30,7 @@ executable("brave_vpn_wireguard_service") {
     ":version_resources",
     "common",
     "service",
-    "interactive",
+    "status_tray",
     "//base",
     "//base:base_static",
     "//build/win:default_exe_manifest",
