--- a/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/status_icon/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/status_icon/BUILD.gn
@@ -5,14 +5,14 @@
 
 source_set("status_icon") {
   sources = [
-    "brave_vpn_menu_model.cc",
-    "brave_vpn_menu_model.h",
     "native_popup_menu.cc",
     "native_popup_menu.h",
     "status_icon.cc",
     "status_icon.h",
     "status_tray.cc",
     "status_tray.h",
+    "tray_menu_model.cc",
+    "tray_menu_model.h",
   ]
 
   public_deps = [ "//skia" ]
