Add protected content icon

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -185,6 +185,7 @@ leo_icons = [
   "info-filled.svg",
   "info-outline.svg",
   "key.svg",
+  "key-lock.svg",
   "launch.svg",
   "link-normal.svg",
   "list-checks.svg",
