--- a/components/brave_vpn/browser/connection/BUILD.gn
+++ b/components/brave_vpn/browser/connection/BUILD.gn
@@ -59,3 +59,14 @@ source_set("common") {
     "//url",
   ]
 }
+
+group("unit_tests") {
+  testonly = true
+  deps = []
+  if (!is_android) {
+    deps += [
+      "ikev2:unit_tests",
+      "wireguard:unit_tests",
+    ]
+  }
+}
