--- a/components/brave_vpn/browser/connection/wireguard/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/BUILD.gn
@@ -23,3 +23,11 @@ source_set("wireguard") {
     "//services/network/public/cpp",
   ]
 }
+
+group("unit_tests") {
+  testonly = true
+  deps = []
+  if (is_win) {
+    deps += [ "win/brave_vpn_wireguard_service/interactive:unit_tests" ]
+  }
+}
