--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -310,6 +310,8 @@ source_set("ui") {
       "views/side_panel/ai_chat/ai_chat_side_panel_utils_views.cc",
       "views/side_panel/brave_side_panel.cc",
       "views/side_panel/brave_side_panel.h",
+      "views/side_panel/brave_side_panel_resize_widget.cc",
+      "views/side_panel/brave_side_panel_resize_widget.h",
       "views/side_panel/playlist/playlist_side_panel_coordinator.cc",
       "views/side_panel/playlist/playlist_side_panel_coordinator.h",
       "views/side_panel/playlist/playlist_side_panel_web_view.cc",
