--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -969,8 +969,10 @@ source_set("ui") {
   }
   if (is_android) {
     sources += [
-      "webui/brave_wallet/android/swap_page_handler.cc",
-      "webui/brave_wallet/android/swap_page_handler.h",
+      "webui/brave_wallet/android/android_wallet_page_handler.cc",
+      "webui/brave_wallet/android/android_wallet_page_handler.h",
+      "webui/brave_wallet/android/send_page_ui.cc",
+      "webui/brave_wallet/android/send_page_ui.h",
       "webui/brave_wallet/android/swap_page_ui.cc",
       "webui/brave_wallet/android/swap_page_ui.h",
       "webui/brave_wallet/common_handler/wallet_handler.cc",
@@ -989,6 +991,7 @@ source_set("ui") {
       "//brave/components/brave_wallet/common:mojom",
       "//brave/components/brave_wallet_ui:resources",
       "//brave/components/brave_wallet_ui/page/screens/swap/android:brave_wallet_swap_page_generated",
+      "//brave/components/brave_wallet_ui/page/screens/send/android:brave_wallet_send_page_generated",
     ]
   }
 
