--- a/ios/browser/api/brave_wallet/BUILD.gn
+++ b/ios/browser/api/brave_wallet/BUILD.gn
@@ -44,8 +44,8 @@ source_set("brave_wallet") {
     "//brave/ios/browser/api/url",
     "//brave/ios/browser/brave_wallet",
     "//ios/chrome/browser/content_settings",
-    "//ios/chrome/browser/paths:paths",
     "//ios/chrome/browser/shared/model/browser_state",
+    "//ios/chrome/browser/shared/model/paths",
     "//net",
     "//ui/base",
   ]
