--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -220,6 +220,8 @@ source_set("ui") {
         "webui/ai_chat/ai_chat_ui_page_handler.cc",
         "webui/ai_chat/ai_chat_ui_page_handler.h",
       ]
+
+      deps += [ "//chrome/browser/favicon" ]
     }
 
     if (is_mac) {
