--- a/android/brave_java_sources.gni
+++ b/android/brave_java_sources.gni
@@ -317,6 +317,10 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/rewards/BraveRewardsPanel.java",
   "../../brave/android/java/org/chromium/chrome/browser/rewards/CountrySelectionSpinnerAdapter.java",
   "../../brave/android/java/org/chromium/chrome/browser/rewards/adaptive_captcha/AdaptiveCaptchaHelper.java",
+  "../../brave/android/java/org/chromium/chrome/browser/rewards/onboarding/RewardsOnBoarding.java",
+  "../../brave/android/java/org/chromium/chrome/browser/rewards/onboarding/RewardsOnBoardingAllSet.java",
+  "../../brave/android/java/org/chromium/chrome/browser/rewards/onboarding/RewardsOnBoardingError.java",
+  "../../brave/android/java/org/chromium/chrome/browser/rewards/onboarding/RewardsOnBoardingLocationChoose.java",
   "../../brave/android/java/org/chromium/chrome/browser/rewards/tipping/MonthlyContributionToolTip.java",
   "../../brave/android/java/org/chromium/chrome/browser/rewards/tipping/RewardsTippingBannerActivity.java",
   "../../brave/android/java/org/chromium/chrome/browser/rewards/tipping/RewardsTippingPanelFragment.java",
