--- a/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/utils/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/utils/BUILD.gn
@@ -3,10 +3,15 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
-source_set("common") {
+source_set("utils") {
   sources = [
     "scoped_hmenu.h",
     "scoped_hwnd.h",
+    "utils.cc",
+    "utils.h",
   ]
-  deps = [ "//base" ]
+  deps = [
+    "//base",
+    "//ui/gfx",
+  ]
 }
