--- a/components/brave_shields/browser/BUILD.gn
+++ b/components/brave_shields/browser/BUILD.gn
@@ -20,6 +20,8 @@ if (!is_ios) {
       "ad_block_filters_provider.h",
       "ad_block_filters_provider_manager.cc",
       "ad_block_filters_provider_manager.h",
+      "ad_block_localhost_filters_provider.cc",
+      "ad_block_localhost_filters_provider.h",
       "ad_block_pref_service.cc",
       "ad_block_pref_service.h",
       "ad_block_regional_service_manager.cc",
