--- a/components/brave_vpn/browser/connection/wireguard/credentials/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/credentials/BUILD.gn
@@ -7,11 +7,10 @@ import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
 
 assert(enable_brave_vpn)
 
-source_set("common") {
+source_set("credentials") {
   sources = [
     "brave_vpn_wireguard_profile_credentials.cc",
     "brave_vpn_wireguard_profile_credentials.h",
-    "constants.h",
   ]
   deps = [ "//base" ]
 }
@@ -22,7 +21,7 @@ source_set("unit_tests") {
   sources = [ "brave_vpn_wireguard_profile_credentials_unittest.cc" ]
 
   deps = [
-    ":common",
+    ":credentials",
     "//base",
     "//testing/gtest",
     "//third_party/abseil-cpp:absl",
