Apply code formatting

--- a/components/brave_wallet_ui/BUILD.gn
+++ b/components/brave_wallet_ui/BUILD.gn
@@ -10,14 +10,14 @@ import("//tools/grit/repack.gni")
 
 repack("resources") {
   if (is_android) {
-    deps = [ 
+    deps = [
+      "//brave/components/brave_wallet_ui/page/screens/send/android:brave_wallet_send_page_generated",
       "//brave/components/brave_wallet_ui/page/screens/swap/android:brave_wallet_swap_page_generated",
-      "//brave/components/brave_wallet_ui/page/screens/send/android:brave_wallet_send_page_generated"
     ]
 
-    sources = [ 
-      "$root_gen_dir/brave/components/brave_wallet_page/resources/brave_wallet_swap_page_generated.pak", 
-      "$root_gen_dir/brave/components/brave_wallet_page/resources/brave_wallet_send_page_generated.pak"
+    sources = [
+      "$root_gen_dir/brave/components/brave_wallet_page/resources/brave_wallet_send_page_generated.pak",
+      "$root_gen_dir/brave/components/brave_wallet_page/resources/brave_wallet_swap_page_generated.pak",
     ]
   } else {
     deps = [
