--- a/components/speedreader/rust/lib/src/readability/Cargo.toml
+++ b/components/speedreader/rust/lib/src/readability/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2018"
 [dependencies]
 bitflags         = "1.2"
 html5ever        = "0.25.1"
-kuchiki = { git = "https://github.com/brave/kuchiki", branch = "speedreader" }
+kuchiki = { git = "https://github.com/brave/kuchiki", rev = "589eadca2c1d06ddda2919354590bfe1ace88a43" }
 lazy_static      = "1.4"
 regex            = "1"
 serde_json       = "1.0"
