Add override for semver 7.5.2
Fix https://github.com/brave/brave-browser/issues/31241

--- a/package.json
+++ b/package.json
@@ -389,6 +389,7 @@
   },
   "overrides": {
     "loader-utils": "2.0.3",
-    "json5": "2.2.3"
+    "json5": "2.2.3",
+    "semver": "7.5.2"
   }
 }
