--- a/ios/browser/brave_wallet/BUILD.gn
+++ b/ios/browser/brave_wallet/BUILD.gn
@@ -34,6 +34,7 @@ source_set("brave_wallet") {
     "//components/keyed_service/ios:ios",
     "//ios/chrome/browser/shared/model/application_context",
     "//ios/chrome/browser/shared/model/browser_state",
+    "//ios/web/public/thread",
     "//mojo/public/cpp/bindings",
     "//services/network/public/cpp",
   ]
