--- a/components/brave_vpn/browser/connection/wireguard/win/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/BUILD.gn
@@ -27,6 +27,7 @@ source_set("win") {
     "//brave/components/brave_vpn/browser/connection/wireguard/common",
     "//brave/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/common",
     "//brave/components/brave_vpn/common",
+    "//brave/components/brave_vpn/common/wireguard/win",
     "//net",
     "//services/network/public/cpp",
   ]
