--- a/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/BUILD.gn
@@ -33,6 +33,7 @@ executable("brave_vpn_wireguard_service") {
     "status_tray",
     "//base",
     "//base:base_static",
+    "//brave/components/brave_vpn/common/wireguard/win",
     "//build/win:default_exe_manifest",
     "//chrome/install_static:install_static_util",
     "//components/crash/core/app",
