--- a/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/common/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/common/BUILD.gn
@@ -5,8 +5,6 @@
 
 source_set("common") {
   sources = [
-    "service_constants.cc",
-    "service_constants.h",
     "wireguard_utils.cc",
     "wireguard_utils.h",
   ]
@@ -16,6 +14,6 @@ source_set("common") {
     "//brave/components/brave_vpn/browser/connection/common/win",
     "//brave/components/brave_vpn/browser/connection/wireguard/common",
     "//brave/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/service:brave_wireguard_manager_idl",
-    "//chrome/install_static:install_static_util",
+    "//brave/components/brave_vpn/common/wireguard/win",
   ]
 }
