--- a/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/service/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/service/BUILD.gn
@@ -31,6 +31,7 @@ source_set("service") {
     "//base",
     "//brave/components/brave_vpn/browser/connection/common/win",
     "//brave/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/common",
+    "//brave/components/brave_vpn/common/wireguard/win",
     "//chrome/installer/util:with_no_strings",
   ]
   libs = [ "Shell32.lib" ]
