Refactor: Separate out SimpleHashClient from AssetDiscoveryTask
and add SimpleHashClient as a member of AssetDiscoveryTask as well as
BraveWalletService.  Previously only AssetDiscoveryTask needed to
interface with SimpleHash, however the new
BraveWalletService::GetSpamNFTs API will also use interface with
SimpleHash, and as a result I've separated out this logic.

Also, scaffold an empty implementation for
BraveWalletService::GetSpamNFTs.

--- a/components/brave_wallet/browser/BUILD.gn
+++ b/components/brave_wallet/browser/BUILD.gn
@@ -130,6 +130,8 @@ static_library("browser") {
     "nonce_tracker.h",
     "password_encryptor.cc",
     "password_encryptor.h",
+    "simple_hash_client.cc",
+    "simple_hash_client.h",
     "simulation_request_helper.cc",
     "simulation_request_helper.h",
     "simulation_response_parser.cc",
