feat(wallet): Panel V2 Headers

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -170,6 +170,7 @@ leo_icons = [
   "edit-box.svg",
   "edit-pencil.svg",
   "ethereum-on.svg",
+  "expand.svg",
   "eye-off.svg",
   "eye-on.svg",
   "filter-settings.svg",
