--- a/components/brave_rewards/core/BUILD.gn
+++ b/components/brave_rewards/core/BUILD.gn
@@ -47,6 +47,14 @@ buildflag_header("buildflags") {
     "UPHOLD_SANDBOX_CLIENT_SECRET=\"$uphold_sandbox_client_secret\"",
     "UPHOLD_SANDBOX_FEE_ADDRESS=\"$uphold_sandbox_fee_address\"",
     "UPHOLD_SANDBOX_OAUTH_URL=\"$uphold_sandbox_oauth_url\"",
+    "ZEBPAY_PRODUCTION_API_URL=\"$zebpay_production_api_url\"",
+    "ZEBPAY_PRODUCTION_CLIENT_ID=\"$zebpay_production_client_id\"",
+    "ZEBPAY_PRODUCTION_CLIENT_SECRET=\"$zebpay_production_client_secret\"",
+    "ZEBPAY_PRODUCTION_OAUTH_URL=\"$zebpay_production_oauth_url\"",
+    "ZEBPAY_SANDBOX_API_URL=\"$zebpay_sandbox_api_url\"",
+    "ZEBPAY_SANDBOX_CLIENT_ID=\"$zebpay_sandbox_client_id\"",
+    "ZEBPAY_SANDBOX_CLIENT_SECRET=\"$zebpay_sandbox_client_secret\"",
+    "ZEBPAY_SANDBOX_OAUTH_URL=\"$zebpay_sandbox_oauth_url\"",
   ]
 }
 
@@ -367,6 +375,8 @@ static_library("engine") {
     "endpoints/post_connect/post_connect.h",
     "endpoints/post_connect/uphold/post_connect_uphold.cc",
     "endpoints/post_connect/uphold/post_connect_uphold.h",
+    "endpoints/post_connect/zebpay/post_connect_zebpay.cc",
+    "endpoints/post_connect/zebpay/post_connect_zebpay.h",
     "endpoints/post_create_transaction/post_create_transaction.cc",
     "endpoints/post_create_transaction/post_create_transaction.h",
     "endpoints/post_wallets/post_wallets.cc",
@@ -384,6 +394,10 @@ static_library("engine") {
     "endpoints/uphold/post_create_transaction/post_create_transaction_uphold.h",
     "endpoints/uphold/post_oauth/post_oauth_uphold.cc",
     "endpoints/uphold/post_oauth/post_oauth_uphold.h",
+    "endpoints/zebpay/get_balance/get_balance_zebpay.cc",
+    "endpoints/zebpay/get_balance/get_balance_zebpay.h",
+    "endpoints/zebpay/post_oauth/post_oauth_zebpay.cc",
+    "endpoints/zebpay/post_oauth/post_oauth_zebpay.h",
     "gemini/gemini.cc",
     "gemini/gemini.h",
     "gemini/gemini_util.cc",
@@ -531,6 +545,14 @@ static_library("engine") {
     "wallet_provider/uphold/get_uphold_wallet.h",
     "wallet_provider/uphold/uphold_transfer.cc",
     "wallet_provider/uphold/uphold_transfer.h",
+    "wallet_provider/zebpay/connect_zebpay_wallet.cc",
+    "wallet_provider/zebpay/connect_zebpay_wallet.h",
+    "wallet_provider/zebpay/get_zebpay_wallet.cc",
+    "wallet_provider/zebpay/get_zebpay_wallet.h",
+    "zebpay/zebpay.cc",
+    "zebpay/zebpay.h",
+    "zebpay/zebpay_util.cc",
+    "zebpay/zebpay_util.h",
   ]
 
   deps = [
