--- a/components/brave_rewards/core/test/BUILD.gn
+++ b/components/brave_rewards/core/test/BUILD.gn
@@ -74,6 +74,8 @@ source_set("test") {
     "//brave/components/brave_rewards/core/endpoints/uphold/post_commit_transaction/post_commit_transaction_uphold_unittest.cc",
     "//brave/components/brave_rewards/core/endpoints/uphold/post_create_transaction/post_create_transaction_uphold_unittest.cc",
     "//brave/components/brave_rewards/core/endpoints/uphold/post_oauth/post_oauth_uphold_unittest.cc",
+    "//brave/components/brave_rewards/core/endpoints/zebpay/get_balance/get_balance_zebpay_unittest.cc",
+    "//brave/components/brave_rewards/core/endpoints/zebpay/post_oauth/post_oauth_zebpay_unittest.cc",
     "//brave/components/brave_rewards/core/gemini/gemini_util_unittest.cc",
     "//brave/components/brave_rewards/core/legacy/bat_helper_unittest.cc",
     "//brave/components/brave_rewards/core/legacy/bat_util_unittest.cc",
