--- a/components/brave_federated/data_stores/BUILD.gn
+++ b/components/brave_federated/data_stores/BUILD.gn
@@ -15,6 +15,8 @@ static_library("data_stores") {
   ]
 
   deps = [
+    "//base",
+    "//brave/components/brave_federated/public/interfaces",
     "//sql",
     "//third_party/abseil-cpp:absl",
   ]
