--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -92,6 +92,7 @@ test("brave_unit_tests") {
   ]
 
   sources = [
+    "//base/trace_event/process_memory_dump_unittest.cc",
     "//brave/browser/brave_content_browser_client_unittest.cc",
     "//brave/browser/brave_stats/brave_stats_updater_unittest.cc",
     "//brave/browser/browsing_data/brave_browsing_data_remover_delegate_unittest.cc",
