Download Brave Wallet component on demand on Android
fixes brave/brave-browser#31824

--- a/browser/component_updater/BUILD.gn
+++ b/browser/component_updater/BUILD.gn
@@ -20,4 +20,12 @@ source_set("component_updater") {
     "//components/update_client",
     "//crypto",
   ]
+
+  if (is_android) {
+    sources += [
+      "brave_component_updater_android.cc",
+      "brave_component_updater_android.h",
+    ]
+    deps += [ "//brave/build/android:jni_headers" ]
+  }
 }
