--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -869,6 +869,7 @@ brave_java_resources = [
   "java/res/layout/fragment_crypto_wallet_onboarding.xml",
   "java/res/layout/fragment_dapps_message.xml",
   "java/res/layout/fragment_dormant_users_engagement_dialog.xml",
+  "java/res/layout/fragment_download_component_progress.xml",
   "java/res/layout/fragment_encryption_key.xml",
   "java/res/layout/fragment_link_subscription_dialog.xml",
   "java/res/layout/fragment_market.xml",
