--- a/components/brave_wallet/browser/BUILD.gn
+++ b/components/brave_wallet/browser/BUILD.gn
@@ -251,6 +251,19 @@ static_library("browser") {
   }
 
   configs += [ ":sardine_config" ]
+
+  if (is_android) {
+    deps += [
+      "//brave/build/android:jni_headers",  # TODO: make separate, as
+                                            # "//brave/browser/brave_ads/android:jni_headers",
+                                            # for example does
+    ]
+
+    sources += [
+      "android_data_files_installer.cc",
+      "android_data_files_installer.h",
+    ]
+  }
 }
 
 if (!is_ios) {
