--- a/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/status_icon/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/status_icon/BUILD.gn
@@ -18,10 +18,9 @@ source_set("status_icon") {
     "tray_menu_model.cc",
     "tray_menu_model.h",
   ]
-
+  public_deps = [ "//ui/base" ]
   deps = [
     "//base",
-    "//ui/base",
     "//ui/gfx",
   ]
 }
